--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                                 <input type="checkbox" class="button-switch__checkbox">
                                 <p class="button-switch__text button-switch__text_view">Без обеспечения</p>
                             </div>
-                            <br>
-                            <br>
-                            <p class="form-text">Сумма кредита</p>
-                            <input class="form-input" type="number" id="amount" name="amount_money" placeholder="5 000 000₽" value="">
-                            <input class="form-range" type="range" oninput="amount.value=(amountRange.value)" id="amountRange" name="amountRange_money" min="100000" max="10000000" value="5000000">
+                            <div class="form-input-group">
+                                <p class="form-text">Сумма кредита</p>
+                                <input class="form-input" type="text" id="amount" name="amount_money" placeholder="5 000 000₽" value="">
+                                <input class="form-range" type="range" oninput="amount.value=(amountRange.value)" id="amountRange" name="amountRange_money" min="100000" max="10000000" value="5000000">
+                            </div>
                             <div class="under-form-text">
                                 <p class="form-text">100 000 ₽</p>
                                 <p class="form-text">10 000 000 ₽</p>
@@ -75,10 +75,11 @@
                             <div class="application-text">
                                 <p>Для обсуждения персональных условий <a class="application-link" href="#">оставьте заявку</a></p>
                             </div>
-
-                            <p class="form-text">Срок кредита</p>
-                            <input class="form-input" type="number" id="amount" name="amount_money" placeholder="2,5 года">
-                            <input class="form-range" type="range" id="amount" name="amount_money">
+                            <div class="form-input-group">
+                                <p class="form-text">Срок кредита</p>
+                                <input class="form-input" type="number" id="amount" name="amount_money" placeholder="2,5 года">
+                                <input class="form-range" type="range" id="amount" name="amount_money">
+                            </div>
                             <div class="under-form-text">
                                 <p class="form-text">13 мес.</p>
                                 <p class="form-text">5 лет</p>
@@ -87,28 +88,28 @@
                     </div>
                     <div class="calc-block__content calc-block__content_view">
                         <div class="content-block">
-                            <p class="content-text">Ежемесячный платеж</p>
-                            <h3 class="content-title">75 000 ₽/мес.</h3>
+                            <div class="invoice-block">
+                                <p class="content-text">Ежемесячный платеж</p>
+                                <h3 class="content-title">75 000 ₽/мес.</h3>
+                            </div>
+                            <div class="credit-program-block">
+                                <p class="content-text">Кредитная программа</p>
+                                <h3 class="content-subtitle">Потребительский кредит</h3>
+                                <p class="content-text">Ставка по кредиту</p>
+                                <h3 class="content-subtitle">16,5%</h3>
+                            </div>
 
-                            <hr>
-
-                            <p class="content-text">Кредитная программа</p>
-                            <h3 class="content-subtitle">Потребительский кредит</h3>
-                            <p class="content-text">Ставка по кредиту</p>
-                            <h3 class="content-subtitle">16,5%</h3>
-
-                            <hr>
-
-                            <br>
                             <div class="checkbox-block">
                                 <input class="checkbox-block_check" type="checkbox" id="check" name="interest" value="check" checked />
                                 <p class="checkbox-block__text"><a href="#" class="checkbox-block__link">Акция</a>ставка 16,5%</p>
                             </div>
-                            <br>
+                            <div class="copy-text-block">
                                 <p class="copy-text">Расчет является приблизительным,<a href="#" class="checkbox-block__link">c учетом возможных скидок</a><br>
-                                и соблюдением всех условий по кредиту. Точные условия<br> по кредиту и расчет вы получите после подачи заявки. Не является публичной офертой.</p>
-                            <br>
+                                    и соблюдением всех условий по кредиту. Точные условия<br> по кредиту и расчет вы получите после подачи заявки. Не является публичной офертой.</p>
+                            </div>
+                            <div class="button-to-send-block">
                                 <button class="button-to-send" onclick="submit()">Отправить заявку</button>
+                            </div>
                         </div>
                         <div class="pseudo-block pseudo-block_first "></div> 
                         <div class="pseudo-block pseudo-block_second "></div>
