--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     и соблюдением всех условий по кредиту. Точные условия<br> по кредиту и расчет вы получите после подачи заявки. Не является публичной офертой.</p>
                             </div>
                             <div class="button-to-send-block">
-                                <button class="button-to-send" onclick="submit()">Отправить заявку</button>
+                                <button class="button-to-send">Отправить заявку</button>
                             </div>
                         </div>
                         <div class="pseudo-block pseudo-block_first "></div> 
