--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>GridMobile</title>
+    <title>Calculator</title>
 </head>
 <body>
 
@@ -64,7 +64,7 @@
                             <div class="form-input-group">
                                 <p class="form-text">Сумма кредита</p>
                                 <input class="form-input" type="text" id="amount" name="amount_money" placeholder="5 000 000₽" value="">
-                                <input class="form-range" type="range" id="amountRange" name="amountRange_money" min="300000" max="10000000" value="5000000">
+                                <input class="form-range" type="range" id="amountRange" name="amountRange_money" min="300000" max="10000000" value="">
                             </div>
                             <div class="under-form-text">
                                 <p class="form-text credit-number__min"></p>
@@ -76,7 +76,7 @@
                             <div class="form-input-group">
                                 <p class="form-text">Срок кредита</p>
                                 <input class="form-input" type="text" id="amountYear" name="amount_year" placeholder="2,5 года">
-                                <input class="form-range" type="range" id="amountYears" name="amount_year" min="13" max="84" value="48">
+                                <input class="form-range" type="range" id="amountYears" name="amount_year" min="13" max="84" value="">
                             </div>
                             <div class="under-form-text">
                                 <p class="form-text credit-data__min"></p>
