--- a/app/Index.html
+++ b/app/Index.html
@@ -125,6 +125,6 @@
         </div>
     </footer>
 
-    <script src="js/test.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
